--- a/examples/Gemfile
+++ b/examples/Gemfile
@@ -2,6 +2,5 @@ source 'https://rubygems.org'
 
 gem 'sinatra'
 gem 'shotgun'
-gem 'thin'
 gem 'omniauth'
-gem 'faraday'
+gem 'omniauth-indieauth', path: File.join(__FILE__, '../..')
